crates/sid-widgets/src/settings/snapshots/sid_widgets__settings__behavior_toggles__tests__behavior_toggles_render_unfocused.snap
---
source: crates/sid-widgets/src/settings/behavior_toggles.rs
expression: s
---
┌ Behavior ────────────────────────────────────────────────┐
│> Auto-restore session                 ask                │
│  State persist debounce (ms)          250                │
│  Session heartbeat interval (s)       5                  │
│  Default tab on launch                workspaces         │
│  Use OS keyring for secrets (requires restart) off       │
│  Config editor (System tab)           nano               │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
border_top_left: fg=Rgb(74, 74, 96) modifier=NONE
title_first_char: symbol="B" fg=Rgb(230, 230, 240) modifier=NONE
